--- a/Dimmer/Dimmer.csproj
+++ b/Dimmer/Dimmer.csproj
@@ -47,16 +47,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="BrightnessSlider.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="BrightnessSlider.Designer.cs">
+      <DependentUpon>BrightnessSlider.cs</DependentUpon>
     </Compile>
+    <Compile Include="ScreenGamma.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="BrightnessSlider.resx">
+      <DependentUpon>BrightnessSlider.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -82,6 +83,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Dimmer.exe" />
     <Content Include="Resources\Background1.jpg" />
     <None Include="Resources\SliderTrack1.png" />
     <None Include="Resources\Slider.jpg" />
